--- a/assets/index.html
+++ b/assets/index.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
+
+<head>
     <meta charset="UTF-8">
-    <script type="text/javascript" src="script.js"></script> 
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
     <title>Psychic-Game</title>
-  </head>
-  <body>
+    <link href="https://fonts.googleapis.com/css?family=Droid+Serif|Open+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+    <!--     <script type="text/javascript" src="javascript/game.js"></script> -->
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
 
-  
-
-
+<body>
+    <h1>
+        The Psychic Game
+    </h1>
+    <h3>
+        Guess what letter I am thinking of.
+    </h3>
+    <h4>
+        <p> Wins:
+            <span id="wins"></span>
+            <br>
+            <p> Losses:
+                <span id="losses"></span>
+                <br>
+                <p> Guesses Left:
+                    <span id="guesses"></span>
+                    <br>
+                    <p> Your guess so far:
+                        <span id="letterArray"></span>
+                        <br>
+    </h4>
+    <script type="text/javascript" src="javascript/game.js"></script>
 </body>
-</html>
