--- a/assets/index.html
+++ b/assets/index.html
@@ -31,6 +31,8 @@
                     <p> Your guess so far:
                         <span id="letterArray"></span>
                         <br>
+                          <p> 
+                          <span id="message"></span>
     </h4>
     <script type="text/javascript" src="javascript/game.js"></script>
 </body>
